--- a/src/App.css
+++ b/src/App.css
@@ -798,6 +798,15 @@
   margin: 0 0 0 5px;
 }
 
+.Footer .ft_bottom{
+  padding: 30px 0;
+  line-height: 1.45;
+}
+
+
+
+
+
 
 .ServiceLink {
   display: flex;
@@ -846,3 +855,4 @@
 .ServiceLink .subLInk.on {
   display: flex;
 }
+
