--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ font
 */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css');
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
 /*
 -------------------------------------
@@ -28,11 +29,11 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans KR';
+  font-family: 'Pretendard Variable';
   font-weight: normal;
   line-height: 1;
   letter-spacing: -0.025em;
-  color: #444444;
+  color: #222222;
 }
 
 ul,
